# src/controllers/notification.controller.js
@@ -1,0 +1,79 @@
+// notification.controller.js
+const Notification = require('../models/notification.model');
+
+// Create a new notification
+exports.createNotification = async (req, res) => {
+    console.log({body: req.body})
+  try {
+    const { title, message, userId } = req.body;
+    const notification = new Notification({ title, message, userId });
+    await notification.save();
+    res.status(201).json({ message: 'Notification created successfully', notification });
+  } catch (err) {
+    res.status(500).json({ message: 'Error creating notification', error: err.message });
+  }
+};
+
+// Get all notifications with pagination
+exports.getAllNotifications = async (req, res) => {
+  try {
+    const page = parseInt(req.query.page) || 1;
+    const limit = 30;
+    const notifications = await Notification.find()
+      .skip((page - 1) * limit)
+      .limit(limit)
+      .sort({ createdAt: -1 });
+    const total = await Notification.countDocuments();
+
+    res.status(200).json({
+      message: 'Notifications fetched successfully',
+      data: notifications,
+      currentPage: page,
+      totalPages: Math.ceil(total / limit),
+    });
+  } catch (err) {
+    res.status(500).json({ message: 'Error fetching notifications', error: err.message });
+  }
+};
+
+// Get notification by ID
+exports.getNotificationById = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const notification = await Notification.findById(id);
+    if (!notification) {
+      return res.status(404).json({ message: 'Notification not found' });
+    }
+    res.status(200).json({ message: 'Notification fetched successfully', notification });
+  } catch (err) {
+    res.status(500).json({ message: 'Error fetching notification', error: err.message });
+  }
+};
+
+// Mark notification as read
+exports.markAsRead = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const notification = await Notification.findByIdAndUpdate(id, { isRead: true }, { new: true });
+    if (!notification) {
+      return res.status(404).json({ message: 'Notification not found' });
+    }
+    res.status(200).json({ message: 'Notification marked as read', notification });
+  } catch (err) {
+    res.status(500).json({ message: 'Error marking notification as read', error: err.message });
+  }
+};
+
+// Delete notification by ID
+exports.deleteNotification = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const notification = await Notification.findByIdAndDelete(id);
+    if (!notification) {
+      return res.status(404).json({ message: 'Notification not found' });
+    }
+    res.status(200).json({ message: 'Notification deleted successfully' });
+  } catch (err) {
+    res.status(500).json({ message: 'Error deleting notification', error: err.message });
+  }
+};
