# src/swagger.yaml
@@ -11,9 +11,33 @@ tags:
     description: Endpoints for Authentications
   - name: Profile
     description: Endpoints for User Profile Management
+  - name: Notifications
+    description: Notification management
 
 components:
   schemas:
+    Notification:
+      type: object
+      properties:
+        id:
+          type: string
+          example: "60d21b4667d0d8992e610c85"
+        title:
+          type: string
+          example: "New Message"
+        message:
+          type: string
+          example: "You have a new message."
+        userId:
+          type: string
+          example: "60d21b4667d0d8992e610c85"
+        read:
+          type: boolean
+          example: false
+        createdAt:
+          type: string
+          format: date-time
+          example: "2024-09-12T14:45:15.000Z"
     Auth:
       type: object
       properties:
@@ -75,6 +99,135 @@ components:
           example: "2023-07-18T12:34:56Z"
 
 paths:
+  /notifications:
+    post:
+      tags:
+        - Notifications
+      summary: Create a new notification
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: "New Message"
+                message:
+                  type: string
+                  example: "You have a new message."
+                userId:
+                  type: string
+                  example: "60d21b4667d0d8992e610c85"
+      responses:
+        '201':
+          description: Notification created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Notification'
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+
+    get:
+      tags:
+        - Notifications
+      summary: Get all notifications with pagination
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: Page number for pagination (default is 1)
+      responses:
+        '200':
+          description: A paginated list of notifications
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  totalItems:
+                    type: integer
+                    example: 100
+                  currentPage:
+                    type: integer
+                    example: 1
+                  totalPages:
+                    type: integer
+                    example: 4
+                  notifications:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Notification'
+        '500':
+          description: Internal server error
+
+  /notifications/{id}:
+    get:
+      tags:
+        - Notifications
+      summary: Get a notification by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The ID of the notification
+      responses:
+        '200':
+          description: The requested notification
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Notification'
+        '404':
+          description: Notification not found
+        '500':
+          description: Internal server error
+
+    patch:
+      tags:
+        - Notifications
+      summary: Mark notification as read
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The ID of the notification to be marked as read
+      responses:
+        '200':
+          description: Notification marked as read
+        '404':
+          description: Notification not found
+        '500':
+          description: Internal server error
+
+    delete:
+      tags:
+        - Notifications
+      summary: Delete a notification by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The ID of the notification
+      responses:
+        '200':
+          description: Notification deleted
+        '404':
+          description: Notification not found
+        '500':
+          description: Internal server error
   /profile:
     post:
       tags:
